--- a/style.css
+++ b/style.css
@@ -68,5 +68,43 @@ form hr {
 
 }
 
-
+.star
+{
+margin: 20px;
+display: inline-block;
+width: 0px;
+height: 0px;
+border-right: 45px solid transparent;
+border-bottom: 40px solid #FFCC00;
+border-left: 45px solid transparent;
+transform: rotate(35deg);
+cursor: pointer;
+}
+.star:before {
+position: absolute;
+display: inline-block;
+left:-32px;
+top:-20px;
+width: 0px;
+height: 0px;
+border-right: 16px solid transparent;
+border-bottom: 35px solid #FFCC00;
+border-left: 16px solid transparent;
+content: '';
+transform: rotate(-34deg);
+cursor:pointer;
+}
+.star:after {
+position: absolute;
+display: inline-block;
+left:-45px;
+top:0px;
+width: 0px;
+height: 0px;
+border-right: 45px solid transparent;
+border-bottom: 40px solid #FFCC00;
+border-left: 45px solid transparent;
+content: '';
+transform: rotate(-70deg);
+cursor:pointer;}
 
